--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "json-loader": "^0.5.7",
     "q": "^1.5.1",
     "reset-css": "^3.0.0",
+    "ssri": "^6.0.0",
     "vue": "^2.5.13",
     "vue-router": "^3.0.1",
     "vue2-google-maps": "^0.8.4"
